# ag-seed-prod

./: .env  .env.example  .gitignore  README.md  api_test.py  chat.py  cv.py  dash.py  forecast_explorer_app.py  main.py  model_update.py  pred.py  pyproject.toml  tab.py  tune.py  utils.py  vibe.md  viz.py  xgb_update_pred.py
config/: residual.toml  xgb.toml
data/: case_study_data.csv
notebooks/: eda.ipynb
src/: utils.py
src/dashboard/: app.py  app1.py
src/pipelines/: explain.py  residue.py  xgb.py
tests/: test_model_update.py  test_pipelines.py
