[project]
name = "ag-seed-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ace-tools>=0.0",
    "altair>=5.5.0",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
    "streamlit>=1.45.1",
    "streamlit-option-menu>=0.4.0",
    "uvicorn>=0.34.3",
    "watchdog>=6.0.0",
    "xgboost>=3.0.2",
]
